[package]
name = "tweteroo-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "0.8.2", features = ["v4"] }
