[package]
name = "tweteroo-rust"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
validator = { version = "0.15", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4"] }
env_logger = "0.10.0"
